Fix build error
Signed-off-by: zane-neo <zaniu@amazon.com>